[project]
name = "bdd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "acme>=5.1.0",
    "behave>=1.3.3",
    "dotenv>=0.9.9",
    "faker>=37.12.0",
    "glom>=24.11.0",
    "httpx>=0.28.1",
    "josepy>=2.2.0",
    "jq>=1.10.0",
]
